fix-deprecations